# V5-2_project

./: .gitignore  bibliography.bib  environment.yml  project.fdb_latexmk  project.fls  project.html  project.ipynb  project.tex  pyproject.toml  task.md  task_evaluation.md  work_summary.md
_backups/: project-3.html
